[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Cenas/Main Scene.gd" type="Script" id=1]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Cenas/GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Cenario/Backgrounds.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Personagens/Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Cenas/Game Over.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Musica/Nebula.ogg" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Background"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../BackgroundA:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1080 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../BackgroundB:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1080 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -6.23964, 3e+07, 0, 0, 0, 0, 576.68, 1e+07 )
}

[node name="Main Scene" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 230.394 ],
"_edit_vertical_guides_": [ 0.0 ]
}

[node name="Admob" type="Node" parent="."]
script = ExtResource( 2 )
is_real = true
banner_id = "ca-app-pub-2388328305588315/2563689909"

[node name="GUI" parent="." instance=ExtResource( 3 )]

[node name="BackgroundB" type="TextureRect" parent="."]
margin_top = 1080.0
margin_right = 540.0
margin_bottom = 2160.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true

[node name="BackgroundA" type="TextureRect" parent="."]
margin_right = 540.0
margin_bottom = 1080.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="BackgroundA"]
autoplay = "Background"
playback_speed = -1.0
anims/Background = SubResource( 1 )

[node name="MobSpawn" type="Path2D" parent="."]
position = Vector2( 5, 150 )
scale = Vector2( 0.926371, 5.25e-13 )
curve = SubResource( 2 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobSpawn"]
position = Vector2( -6.23964, 3e+07 )
rotation = -1.57074

[node name="SpawnTimer" type="Timer" parent="MobSpawn"]
wait_time = 3.0

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 270, 970 )
priority = 1.0

[node name="DEBUG" type="Label" parent="."]
visible = false
margin_left = 10.0
margin_top = 140.0
margin_right = 150.0
margin_bottom = 160.0
text = "DEBUG V0.1 Odyssey"

[node name="Dialog_Back" type="ColorRect" parent="."]
visible = false
margin_right = 540.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.254902 )

[node name="Game_Over" parent="." instance=ExtResource( 6 )]
visible = false
margin_left = 0.0
margin_top = 0.0
margin_right = 540.0
margin_bottom = 1080.0

[node name="Sound_Game" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
[connection signal="end_game" from="." to="GUI" method="_on_Main_Scene_end_game"]
[connection signal="end_game" from="." to="Player" method="_on_Main_Scene_end_game"]
[connection signal="pause_game" from="." to="Player" method="_on_Main_Scene_pause_game"]
[connection signal="start_game" from="." to="GUI" method="_on_Main_Scene_start_game"]
[connection signal="start_game" from="." to="Player" method="_on_Main_Scene_start_game"]
[connection signal="notify_pause" from="GUI" to="." method="_on_GUI_notify_pause"]
[connection signal="notify_reload" from="GUI" to="." method="_on_GUI_notify_reload"]
[connection signal="timeout" from="MobSpawn/SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="dead" from="Player" to="." method="_end_game"]
[connection signal="debug" from="Player" to="." method="_on_Player_debug"]
[connection signal="life_changed" from="Player" to="." method="_on_Player_life_changed"]
[connection signal="sendto_add" from="Player" to="." method="_on_Player_sendto_add"]
[connection signal="tutorial" from="Player" to="." method="_on_Player_tutorial"]
